// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> component Clicking book button should render popup component 1`] = `
<div
  className="reservations-footer"
>
  <div
    className="content"
  >
    <button
      className="bookButton"
      onClick={[Function]}
    >
      Book
    </button>
  </div>
</div>
`;

exports[`<App /> component Clicking book button should render popup component 2`] = `
<div
  className="reservations-footer"
>
  <div
    className="content"
  >
    <button
      className="bookButton"
      onClick={[Function]}
    >
      Book
    </button>
  </div>
  <Popup
    checkInActive={false}
    checkOutActive={false}
    closeCalendar={[Function]}
    handleCheckInClick={[Function]}
    handleCheckOutClick={[Function]}
    handleClearDates={[Function]}
    handleDateClick={[Function]}
    onClose={[Function]}
    reservationData={Object {}}
    showCalendar={false}
    updateReservationData={[Function]}
  />
</div>
`;

exports[`<App /> component Clicking checkin button should render calendar component 1`] = `
<App>
  <div
    className="reservations-footer"
  >
    <div
      className="content"
    >
      <button
        className="bookButton"
        onClick={[Function]}
      >
        Book
      </button>
    </div>
    <Popup
      checkInActive={true}
      checkOutActive={false}
      closeCalendar={[Function]}
      handleCheckInClick={[Function]}
      handleCheckOutClick={[Function]}
      handleClearDates={[Function]}
      handleDateClick={[Function]}
      onClose={[Function]}
      reservationData={Object {}}
      showCalendar={true}
      updateReservationData={[Function]}
    >
      <div
        className="pop-up"
        onClick={[Function]}
      >
        <div
          className="pop-up-content"
        >
          <div
            className="inner-content"
          >
            <div
              className="inner-inner-content"
            >
              <div
                className="close-dialog-container"
              >
                <button
                  className="close-button"
                  onClick={[Function]}
                />
              </div>
              <div
                className="reservations-dialog-container"
              >
                <div
                  className="dates"
                >
                  <label
                    className="reservation-label"
                    htmlFor="dates-container"
                  >
                    <span>
                      Dates
                    </span>
                  </label>
                  <div
                    className="dates-container"
                    id="dates-container"
                  >
                    <div
                      className="checkin-container"
                    >
                      <input
                        autoComplete="off"
                        id="checkin"
                        name="checkin"
                        onClick={[Function]}
                        placeholder="Check In"
                        type="text"
                        value=""
                      />
                      <div
                        className="check-in-text active"
                      >
                        Check In
                      </div>
                    </div>
                     
                    <div
                      className="checkout-container"
                    >
                      <input
                        autoComplete="off"
                        id="checkout"
                        name="checkout"
                        onClick={[Function]}
                        placeholder="Check Out"
                        type="text"
                        value=""
                      />
                      <div
                        className="check-out-text "
                      >
                        Check Out
                      </div>
                    </div>
                    <Calendar
                      checkInActive={true}
                      dates={
                        Object {
                          "checkInDate": undefined,
                          "checkOutDate": undefined,
                          "lastPossibleCheckInDate": undefined,
                          "lastPossibleCheckOutDate": undefined,
                        }
                      }
                      handleClearDates={[Function]}
                      onClick={[Function]}
                      reservationData={Object {}}
                      updateReservationData={[Function]}
                    >
                      <div
                        className="outer-calendar-pop-up"
                      >
                        <div
                          className="inner-calendar-pop-up"
                        >
                          <div
                            className="calendar-holder"
                          >
                            <button
                              className="left-arrow"
                              onClick={[Function]}
                            />
                            <h4
                              className="calendar-header"
                            >
                              March 2018
                            </h4>
                            <button
                              className="right-arrow"
                              onClick={[Function]}
                            />
                            <div
                              className="days-of-week-div"
                            >
                              <ul
                                className="days"
                              >
                                <li
                                  className="day"
                                >
                                  <small>
                                    Su
                                  </small>
                                </li>
                                <li
                                  className="day"
                                >
                                  <small>
                                    Mo
                                  </small>
                                </li>
                                <li
                                  className="day"
                                >
                                  <small>
                                    Tu
                                  </small>
                                </li>
                                <li
                                  className="day"
                                >
                                  <small>
                                    We
                                  </small>
                                </li>
                                <li
                                  className="day"
                                >
                                  <small>
                                    Th
                                  </small>
                                </li>
                                <li
                                  className="day"
                                >
                                  <small>
                                    Fr
                                  </small>
                                </li>
                                <li
                                  className="day"
                                >
                                  <small>
                                    Sa
                                  </small>
                                </li>
                              </ul>
                            </div>
                          </div>
                          <div
                            className="calendar-footer"
                          >
                            <div
                              className="calendar-footer-content"
                            >
                              <small
                                className="fine-print"
                              >
                                <div>
                                  Minimum Stay Varies
                                </div>
                                <div>
                                  Updated Today
                                </div>
                              </small>
                            </div>
                          </div>
                        </div>
                      </div>
                    </Calendar>
                  </div>
                </div>
                <div
                  className="guests"
                >
                  <label
                    className="guest-label"
                    htmlFor="guests-button"
                  >
                    <span>
                      Guests
                    </span>
                  </label>
                  <button
                    className="guests-button"
                    id="guests-button"
                  >
                    <div
                      className="guests-container"
                    >
                      <span
                        className="guest-text"
                      >
                        <span>
                          1 guest
                        </span>
                      </span>
                    </div>
                  </button>
                </div>
              </div>
              <div
                className="booking-button-container"
              >
                <button
                  className="book-now-button"
                >
                  <span
                    className="book-now-span"
                  >
                    <div
                      className="book-now-div"
                    >
                      <span>
                        Book
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </Popup>
  </div>
</App>
`;

exports[`<App /> component Clicking outside of checkin/checkout button should close calendar component 1`] = `
<App>
  <div
    className="reservations-footer"
  >
    <div
      className="content"
    >
      <button
        className="bookButton"
        onClick={[Function]}
      >
        Book
      </button>
    </div>
    <Popup
      checkInActive={false}
      checkOutActive={false}
      closeCalendar={[Function]}
      handleCheckInClick={[Function]}
      handleCheckOutClick={[Function]}
      handleClearDates={[Function]}
      handleDateClick={[Function]}
      onClose={[Function]}
      reservationData={Object {}}
      showCalendar={false}
      updateReservationData={[Function]}
    >
      <div
        className="pop-up"
        onClick={[Function]}
      >
        <div
          className="pop-up-content"
        >
          <div
            className="inner-content"
          >
            <div
              className="inner-inner-content"
            >
              <div
                className="close-dialog-container"
              >
                <button
                  className="close-button"
                  onClick={[Function]}
                />
              </div>
              <div
                className="reservations-dialog-container"
              >
                <div
                  className="dates"
                >
                  <label
                    className="reservation-label"
                    htmlFor="dates-container"
                  >
                    <span>
                      Dates
                    </span>
                  </label>
                  <div
                    className="dates-container"
                    id="dates-container"
                  >
                    <div
                      className="checkin-container"
                    >
                      <input
                        autoComplete="off"
                        id="checkin"
                        name="checkin"
                        onClick={[Function]}
                        placeholder="Check In"
                        type="text"
                        value=""
                      />
                      <div
                        className="check-in-text "
                      >
                        Check In
                      </div>
                    </div>
                     
                    <div
                      className="hyphen"
                    >
                      -
                    </div>
                    <div
                      className="checkout-container"
                    >
                      <input
                        autoComplete="off"
                        id="checkout"
                        name="checkout"
                        onClick={[Function]}
                        placeholder="Check Out"
                        type="text"
                        value=""
                      />
                      <div
                        className="check-out-text "
                      >
                        Check Out
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="guests"
                >
                  <label
                    className="guest-label"
                    htmlFor="guests-button"
                  >
                    <span>
                      Guests
                    </span>
                  </label>
                  <button
                    className="guests-button"
                    id="guests-button"
                  >
                    <div
                      className="guests-container"
                    >
                      <span
                        className="guest-text"
                      >
                        <span>
                          1 guest
                        </span>
                      </span>
                    </div>
                  </button>
                </div>
              </div>
              <div
                className="booking-button-container"
              >
                <button
                  className="book-now-button"
                >
                  <span
                    className="book-now-span"
                  >
                    <div
                      className="book-now-div"
                    >
                      <span>
                        Book
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </Popup>
  </div>
</App>
`;
